@@ -26,6 +26,9 @@ LanguageTool Change Log
 	-added/improved a few rules
 	-it now has 3400+ compound words
 
+-for languages with many rules (like French or German) performance
+ on long texts has been increased by about 20-30%
+
 -fix for thread-safety (could cause hang in MultiWordChunker)
 
 -fixed a bug where chunk annotations were not tested in <and> groups
